- update link for product en

--- a/src/doi-tac-chien-luoc.ejs
+++ b/src/doi-tac-chien-luoc.ejs
@@ -76,7 +76,7 @@
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>MASSEL</h3>
                                             <p>Năm 2023, <strong>Minh Anh Group</strong> chính thức trở thành đối tác chiến
-                                              lược của <strong>Massel</strong> trong việc phân phối nhóm sản phẩm không chứa gluten, lactose và các chất béo động vật, phù hợp với người ăn chay và người ăn chay ăn chay.</p>
+                                              lược của <strong>Massel</strong> trong việc phân phối nhóm sản phẩm không chứa gluten, lactose và các chất béo động vật, phù hợp với người ăn chay và người thuần ăn chay.</p>
                                           </div>
                                         </div>
                                       </div>
