--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -57,6 +57,51 @@
                     <div class="wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
+
+                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
+                          style=' text-align:left;'>
+                          <div class=" full_section_inner clearfix">
+                            <div class="  element_from_left">
+                              <div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6">
+                                  <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                      <div
+                                        class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
+                                        <div class="wpb_wrapper">
+                                          <p><img class="alignnone size-medium wp-image-78"
+                                              src="../assets/img/doi-tac-chien-luoc/logo_massel.svg" alt=""
+                                              width="300" height="141"
+                                              srcset="../assets/img/doi-tac-chien-luoc/logo_massel.svg 300w, ../assets/img/doi-tac-chien-luoc/logo_massel.svg 369w"
+                                              sizes="(max-width: 300px) 100vw, 300px" /></p>
+                                          <h3>MASSEL</h3>
+                                          <p>Năm 2023, <strong>Minh Anh Group</strong> has officially become a strategic partner of Massel in distributing a range of products that are gluten-free, lactose-free, and free from animal fats, catering to vegetarians and vegans.</p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="wpb_column vc_column_container vc_col-sm-6">
+                                  <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                      <div class="wpb_single_image wpb_content_element vc_align_left">
+                                        <div class="wpb_wrapper">
+                                          <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
+                                              height="618"
+                                              src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                              class="vc_single_image-img attachment-full" alt=""
+                                              srcset="../assets/img/doi-tac-chien-luoc/product_massel.jpg 792w, ../assets/img/doi-tac-chien-luoc/product_massel.jpg 300w, ../assets/img/doi-tac-chien-luoc/product_massel.jpg 768w, ../assets/img/doi-tac-chien-luoc/product_massel.jpg 700w"
+                                              sizes="(max-width: 792px) 100vw, 792px" /></div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
                           <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
