--- a/src/en/product.ejs
+++ b/src/en/product.ejs
@@ -75,7 +75,7 @@
                                               Vegetable Protein, Marine, Dairy and other complementary products in line
                                               with technology and Production standards for animal feed in Vietnam.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/nguyen-lieu-thuc-an-chan-nuoi-en/">LEARN
+                                                href="../en/product/nong-san-nguyen-lieu-tho-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -138,7 +138,7 @@
                                               optimize cost and performance of livestock, in line with the environment
                                               and the technology of producing feeds. farming in Vietnam.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/premix-vitamin-en/">LEARN
+                                                href="../en/product/premix-vitamin-khoang-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -167,7 +167,7 @@
                                               optimize cost and performance of livestock, in line with the environment
                                               and the technology of producing feeds. farming in Vietnam.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/premix-vitamin-en/">LEARN
+                                                href="../en/product/premix-vitamin-khoang-en.html/">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -212,7 +212,7 @@
                                               productivity, creating a sustainable competitive advantage for the
                                               product.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/phu-gia-chan-nuoi-en/">LEARN
+                                                href="../en/product/phu-gia-chan-nuoi-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -274,7 +274,7 @@
                                               includes alternative milk replacers, nutrients to support disease
                                               management, improved survival and optimum livestock productivity.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/san-pham-dung-cho-trang-trai-en/">LEARN
+                                                href="../en/product/san-pham-dung-cho-trang-trai-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -303,7 +303,7 @@
                                               includes alternative milk replacers, nutrients to support disease
                                               management, improved survival and optimum livestock productivity.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/san-pham-dung-cho-trang-trai-en/">LEARN
+                                                href="../en/product/san-pham-dung-cho-trang-trai-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
@@ -348,7 +348,7 @@
                                               food production &#8211; cosmetics at reasonable prices suitable to the
                                               conditions of food production and cosmetics in Vietnam.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/en/product/nguyen-lieu-thuc-pham-my-pham-en/">LEARN
+                                                href="../en/product/nguyen-lieu-thuc-pham-my-pham-en.html">LEARN
                                                 MORE</a>
                                             </p>
                                           </div>
