--- a/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
+++ b/src/en/product/nong-san-nguyen-lieu-tho-en.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner-1.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,15 +96,15 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/doitact_logo_1-300x141.png"
-                                    alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_4-300x80.png"
-                                    alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_2-1.png" alt=""
-                                    width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_3-300x188.png"
-                                    alt="" width="300" height="188" />
-                                </div>
+                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
+                                  src="../../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
+                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  width="174" height="168" /><img class="alignnone size-medium wp-image-191"
+                                  src="../../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  alt="" width="300" height="188" />
+                              </div>
                               </div>
                             </div>
                             <div class="widget widget_text">
@@ -135,9 +135,9 @@
                             <h3><strong>1. ANIMAL </strong><strong>PROTEIN</strong></h3>
                             <p>&nbsp;</p>
                             <p><img class="size-full wp-image-736 aligncenter"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ.jpg" alt=""
+                                src="../../assets/img/san-pham/3.-Bột-lông-vũ.jpg" alt=""
                                 width="400" height="267"
-                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ.jpg 400w, https://www.viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ-300x200.jpg 300w"
+                                srcset="../../assets/img/san-pham/3.-Bột-lông-vũ.jpg 400w, ../../assets/img/san-pham/3.-Bột-lông-vũ-300x200.jpg 300w"
                                 sizes="(max-width: 400px) 100vw, 400px" />One of the sources of protein produced from
                               byproducts during slaughter. All processes use specialized equipment to ensure maximum
                               purity and quality of products.</p>
@@ -153,7 +153,7 @@
                             <p>&nbsp;</p>
                             <h3><strong>2. <b>VEGETABLE PROTEIN</b></strong></h3>
                             <p><img class="size-full wp-image-290 aligncenter"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/06/1.-DDGS-e1529389972529.jpg"
+                                src="../../assets/img/san-pham/1.-DDGS-e1529389972529.jpg"
                                 alt="" width="400" height="300" /><br />
                               With our extensive network, we diversify our plant protein products to meet the
                               plant&#8217;s production standards at the best prices.</p>
@@ -167,7 +167,7 @@
                             <p>&nbsp;</p>
                             <h3><strong>3. MARINE &#8211; DAIRY &#8211; ACID AMIN</strong></h3>
                             <p><img class="size-full wp-image-292"
-                                src="https://vietacc.commamedia.vn/wp-content/uploads/2018/06/6.-DCP-e1529390044856.jpg"
+                                src="../../assets/img/san-pham/6.-DCP-e1529390044856.jpg"
                                 alt="" width="400" height="267" /></p>
                             <p>Marine, Dairy, Amine Acid are selected from various sources to ensure the requirements of
                               quality and safety of the product.</p>
