--- a/src/partial/footer.ejs
+++ b/src/partial/footer.ejs
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="vc_row wpb_row section vc_row-fluid  footer_row_2 grid_section"
-          style='background-color:#f4f4f4; text-align:left;'>
+          style='background-color:#ffffff; text-align:left;'>
           <div class=" section_inner clearfix">
             <div class='section_inner_margin clearfix'>
               <div class="copy_right_text wpb_column vc_column_container vc_col-sm-4">
