--- a/src/san-pham.ejs
+++ b/src/san-pham.ejs
@@ -76,7 +76,7 @@
                                               Marine, Dairy và các sản phẩm bổ trợ khác phù hợp với công nghệ và tiêu
                                               chuẩn sản xuất Thức ăn chăn nuôi tại Việt Nam.<br />
                                               <a class="button_learmore"
-                                                href="../san-pham/nong-san-nguyen-lieu-tho/">TÌM HIỂU THÊM</a>
+                                                href="../san-pham/nong-san-nguyen-lieu-tho.html">TÌM HIỂU THÊM</a>
                                             </p>
                                           </div>
                                         </div>
@@ -137,7 +137,7 @@
                                               hóa chi phí và năng suất vật nuôi, phù hợp với môi trường và công nghệ sản
                                               xuất thức ăn chăn nuôi tại Việt Nam.<br />
                                               <a class="button_learmore"
-                                                href="../san-pham/premix-vitamin/">TÌM HIỂU
+                                                href="../san-pham/premix-vitamin-khoang.html">TÌM HIỂU
                                                 THÊM</a>
                                             </p>
                                           </div>
@@ -165,7 +165,7 @@
                                               xuất thức ăn chăn nuôi, các nhóm sản phẩm gồm: Đạm động vật, Đạm thực vật,
                                               Marine, Dairy và các sản phẩm bổ trợ khác phù hợp với tiêu chuẩn sản xuất
                                               Thức ăn chăn nuôi tại Việt Nam.<br />
-                                              <a class="button_learmore" href="../san-pham/premix-vitamin/">TÌM HIỂU
+                                              <a class="button_learmore" href="../san-pham/premix-vitamin-khoang.html">TÌM HIỂU
                                                 THÊM</a>
                                             </p>
                                           </div>
@@ -209,7 +209,7 @@
                                               hàng đầu thế giới, chúng được thiết kế nhằm tối ưu hóa chi phí và tối đa
                                               hóa năng suất vật nuôi, tạo lợi thế cạnh tranh bền vững cho sản
                                               phẩm.<br />
-                                              <a class="button_learmore" href="../san-pham/phu-gia-chan-nuoi/">TÌM HIỂU
+                                              <a class="button_learmore" href="../san-pham/phu-gia-chan-nuoi.html">TÌM HIỂU
                                                 THÊM</a>
                                             </p>
                                           </div>
@@ -272,7 +272,7 @@
                                               trợ điều trị bệnh, nâng cao tỷ lệ sống và tối ưu năng suất chăn
                                               nuôi.<br />
                                               <a class="button_learmore"
-                                                href="../san-pham/san-pham-dung-cho-nong-trai/">TÌM HIỂU THÊM</a>
+                                                href="../san-pham/san-pham-dung-cho-trang-trai.html">TÌM HIỂU THÊM</a>
                                             </p>
                                           </div>
                                         </div>
@@ -300,7 +300,7 @@
                                               bao gồm nhóm sữa thay thế, chất dinh dưỡng hỗ trợ điều trị bệnh, nâng cao
                                               tỷ lệ sống và tối ưu năng suất chăn nuôi.<br />
                                               <a class="button_learmore"
-                                                href="../san-pham/san-pham-dung-cho-nong-trai/">TÌM HIỂU THÊM</a>
+                                                href="../san-pham/san-pham-dung-cho-trang-trai.html">TÌM HIỂU THÊM</a>
                                             </p>
                                           </div>
                                         </div>
@@ -344,7 +344,7 @@
                                               sản xuất Thực phẩm &#8211; Mỹ phẩm với mức giá hợp lý, phù hợp với điều
                                               kiện sản xuất Thực phẩm và Mỹ phẩm tại Việt Nam.<br />
                                               <a class="button_learmore"
-                                                href="../san-pham/nguyen-lieu-thuc-pham-my-pham/">TÌM HIỂU THÊM</a>
+                                                href="../san-pham/nguyen-lieu-thuc-pham-my-pham.html">TÌM HIỂU THÊM</a>
                                             </p>
                                           </div>
                                         </div>
