--- a/src/san-pham/nguyen-lieu-thuc-pham-my-pham.ejs
+++ b/src/san-pham/nguyen-lieu-thuc-pham-my-pham.ejs
@@ -33,7 +33,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner-1.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -96,13 +96,13 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/doitact_logo_1-300x141.png"
+                                    src="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
                                     alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_4-300x80.png"
+                                    src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
                                     alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_2-1.png" alt=""
+                                    src="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
                                     width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_3-300x188.png"
+                                    src="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
                                     alt="" width="300" height="188" />
                                 </div>
                               </div>
@@ -190,9 +190,9 @@
                             <h3><strong>NGUYÊN LIỆU THỰC PHẨM</strong></h3>
                             <p>&nbsp;</p>
                             <h3><img class="alignnone size-full wp-image-338"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562.png" alt=""
+                                src="../assets/img/san-pham/1528276943562.png" alt=""
                                 width="440" height="260"
-                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562.png 440w, https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562-300x177.png 300w"
+                                srcset="../assets/img/san-pham/1528276943562.png 440w, ../assets/img/san-pham/1528276943562-300x177.png 300w"
                                 sizes="(max-width: 440px) 100vw, 440px" /></h3>
                             <p>Nhóm nguyên liệu chất lượng cao được sử dụng trong ngành công nghiệp chế biến thực phẩm,
                               phù hợp với các tiêu chuẩn sản xuất tại Việt Nam.</p>
@@ -202,7 +202,7 @@
                             <h3><strong>NGUYÊN LIỆU MỸ PHẨM</strong></h3>
                             <p>&nbsp;</p>
                             <p><img class="alignnone size-full wp-image-339"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/06/brandbox-decovery-website-long-e1529393502969.png"
+                                src="../assets/img/san-pham/brandbox-decovery-website-long-e1529393502969.png"
                                 alt="" width="500" height="200" /></p>
                             <p>Với mạng lưới liên kết rộng lớn chúng tôi tạo dựng nguồn nguyên liệu mỹ phẩm theo các
                               tiêu chuẩn tiên tiến, bao gồm:</p>
