--- a/src/san-pham/nong-san-nguyen-lieu-tho.ejs
+++ b/src/san-pham/nong-san-nguyen-lieu-tho.ejs
@@ -34,7 +34,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner-1.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -97,15 +97,15 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/doitact_logo_1-300x141.png"
-                                    alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_4-300x80.png"
-                                    alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_2-1.png" alt=""
-                                    width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_3-300x188.png"
-                                    alt="" width="300" height="188" />
-                                </div>
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
+                                  src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  width="174" height="168" /><img class="alignnone size-medium wp-image-191"
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  alt="" width="300" height="188" />
+                              </div>
                               </div>
                             </div>
                             <div class="widget widget_text">
@@ -191,9 +191,9 @@
                             <h3><strong>1. ĐẠM ĐỘNG VẬT</strong></h3>
                             <p>&nbsp;</p>
                             <p><img class="size-full wp-image-736 aligncenter"
-                                src="https://viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ.jpg" alt=""
+                                src="../assets/img/san-pham/3.-Bột-lông-vũ.jpg" alt=""
                                 width="400" height="267"
-                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ.jpg 400w, https://www.viet-acc.com/wp-content/uploads/2018/07/3.-Bột-lông-vũ-300x200.jpg 300w"
+                                srcset="../assets/img/san-pham/3.-Bột-lông-vũ.jpg 400w, ../assets/img/san-pham/3.-Bột-lông-vũ-300x200.jpg 300w"
                                 sizes="(max-width: 400px) 100vw, 400px" /></p>
                             <p>Là một trong những nguồn đạm được sản xuất từ phụ phẩm trong quá trình giết mổ động vật.
                               Toàn bộ quá trình đều sử dụng thiết bị chuyên dụng nhằm đảm bảo tối đa độ tinh khiết và
@@ -207,11 +207,11 @@
                               Hàm lượng đạm cao, ít tạp chất, hàm lượng độc tố và vi khuẩn có hại ở mức thấp, nguồn gốc
                               rõ ràng.</p>
                             <p><strong><img class="aligncenter wp-image-291 size-full"
-                                  src="https://www.viet-acc.com/wp-content/uploads/2018/06/2.-Bắp-hạt-e1529390000960.jpg"
+                                  src="../assets/img/san-pham/2.-Bắp-hạt-e1529390000960.jpg"
                                   alt="" width="400" height="280" /></strong></p>
                             <h3><strong>2. ĐẠM THỰC VẬT</strong></h3>
                             <p><img class="size-full wp-image-732 aligncenter"
-                                src="https://viet-acc.com/wp-content/uploads/2018/07/2.-Bắp-hạt-1024x717-e1531318511782.jpg"
+                                src="../assets/img/san-pham/2.-Bắp-hạt-1024x717-e1531318511782.jpg"
                                 alt="" width="400" height="280" /></p>
                             <p>Với mạng lưới liên kết rộng lớn, chúng tôi đa dạng nhóm sản phẩm đạm thực vật nhằm đáp
                               ứng đúng tiêu chuẩn sản xuất của Nhà máy cùng với mức giá tốt nhất.</p>
@@ -225,7 +225,7 @@
                             <p>&nbsp;</p>
                             <h3><strong>3. MARINE &#8211; DAIRY &#8211; ACID AMIN</strong></h3>
                             <p><img class="wp-image-292 size-full aligncenter"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/06/6.-DCP-e1529390044856.jpg"
+                                src="../assets/img/san-pham/6.-DCP-e1529390044856.jpg"
                                 alt="" width="400" height="267" /></p>
                             <p>Nhóm Marine, Dairy, Acid Amin được chúng tôi chọn lọc từ nhiều nguồn khác nhau nhằm đảm
                               bảo đúng yêu cầu về chất lượng cũng như độ an toàn của sản phẩm.</p>
