--- a/src/san-pham/san-pham-dung-cho-trang-trai.ejs
+++ b/src/san-pham/san-pham-dung-cho-trang-trai.ejs
@@ -35,7 +35,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner-1.png" alt="&nbsp;" /> </div>
+                  src="../assets/img/san-pham/banner-1.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
@@ -98,15 +98,15 @@
                             <div class="widget_text widget widget_custom_html">
                               <div class="textwidget custom-html-widget">
                                 <div class="img_doitact_siderbar"><img class="alignnone size-medium wp-image-78"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/doitact_logo_1-300x141.png"
-                                    alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_4-300x80.png"
-                                    alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_2-1.png" alt=""
-                                    width="174" height="168" /><img class="alignnone size-medium wp-image-191"
-                                    src="https://vietacc.commamedia.vn/wp-content/uploads/2018/05/logo_3-300x188.png"
-                                    alt="" width="300" height="188" />
-                                </div>
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png"
+                                  alt="" width="300" height="141" /><img class="alignnone size-medium wp-image-189"
+                                  src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  alt="" width="300" height="80" /><img class="alignnone size-full wp-image-192"
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                  width="174" height="168" /><img class="alignnone size-medium wp-image-191"
+                                  src="../assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png"
+                                  alt="" width="300" height="188" />
+                              </div>
                               </div>
                             </div>
                             <div class="widget widget_text">
@@ -191,7 +191,7 @@
                           <div class="wpb_wrapper">
                             <p><strong>NHÓM SỮA THAY THẾ</strong></p>
                             <p><img class="alignnone size-full wp-image-77"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_3-e1529392504214.png"
+                                src="../assets/img/san-pham/doitact_3-e1529392504214.png"
                                 alt="" width="440" height="343" /></p>
                             <p>Celtilait là sản phẩm thay thế chuyên biệt dành cho bê con, đáp ứng chính xác nhu cầu của
                               bê và tăng trưởng tối ưu.<br />
@@ -205,7 +205,7 @@
                             <p>&nbsp;</p>
                             <p><strong>CALCIUM TOP</strong></p>
                             <p><img class="alignnone size-full wp-image-336"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/06/vacuno-e1529392707504.jpg"
+                                src="../assets/img/san-pham/vacuno-e1529392707504.jpg"
                                 alt="" width="440" height="275" /></p>
                             <p>Cung cấp đủ lượng canxi trong thời gian sau khi sinh nhằm tránh bị sốt sữa. Hỗ trợ quá
                               trình trao đổi chất, tăng khả năng bài tiết sữa và hỗ trợ điều trị bại liệt.</p>
@@ -213,7 +213,7 @@
                             <p>&nbsp;</p>
                             <p><strong>NHÓM PREMIX-VITAMIN</strong></p>
                             <p><img class="alignnone size-full wp-image-171"
-                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/product_detail_img_1-e1529392844503.png"
+                                src="../assets/img/san-pham/product_detail_img_1-e1529392844503.png"
                                 alt="" width="440" height="233" /></p>
                             <p>Nhóm sản phẩm chất lượng cao chuyên sử dụng cho hệ thống trại thương phẩm bao gồm nhóm
                               sữa thay thế, chất dinh dưỡng hỗ trợ điều trị bệnh, nâng cao tỷ lệ sống và năng suất chăn
