--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -598,6 +598,12 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
+                                <img src="../assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  alt="" />
+                              </figure>
+                            </div>
+                            <div class="slide-item">
+                              <figure>
                                 <img src="../assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
