--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -71,6 +71,10 @@
                     href="/san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><span>Sản Phẩm</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
+                <li id="mobile-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'bat-dong-san' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
+                  href="/bat-dong-san.html" class="<%= page === 'bat-dong-san' ? 'current' : '' %>"><span>Dự án BĐS</span></a><span
+                  class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
+              </li>
                 <li id="mobile-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
                     href="/doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><span>Đối Tác Chiến
                       Lược</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i
@@ -96,6 +100,9 @@
           <li id="nav-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'san-pham' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/san-pham.html" class="<%= page === 'san-pham' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Sản
                 Phẩm</span><span class="plus"></span></a></li>
+          <li id="nav-menu-item-195" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'bat-dong-san' ? 'current-menu-item current_page_item active' : '' %>"><a
+            href="/bat-dong-san.html" class="<%= page === 'bat-dong-san' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Dự án 
+              BĐS</span><span class="plus"></span></a></li>
           <li id="nav-menu-item-93" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'doi-tac-chien-luoc' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/doi-tac-chien-luoc.html" class="<%= page === 'doi-tac-chien-luoc' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Đối Tác Chiến Lược</span><span class="plus"></span></a></li>
