--- a/src/index.ejs
+++ b/src/index.ejs
@@ -655,6 +655,12 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
+                                <img src="assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                  alt="" />
+                              </figure>
+                            </div>
+                            <div class="slide-item">
+                              <figure>
                                 <img src="assets/img/index/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
