--- a/src/tin-tuc-su-kien.ejs
+++ b/src/tin-tuc-su-kien.ejs
@@ -66,6 +66,31 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
+                                          href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
+                                      <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
+                                        oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải
+                                        thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
+                                      <a href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"
+                                        class="button_learmore">Xem thêm</a>
+                                    </div>
+                                  </div>
+                                  <div class="thumbnail">
+                                    <a
+                                      href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"><img
+                                        width="792" height="618"
+                                        src="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
+                                        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
+                                        srcset="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg 792w, assets/img/tin-tuc-su-kien/img_chuoi_1-300x234.jpg 300w, assets/img/tin-tuc-su-kien/img_chuoi_1-768x599.jpg 768w, assets/img/tin-tuc-su-kien/img_chuoi_1-700x546.jpg 700w"
+                                        sizes="(max-width: 792px) 100vw, 792px" /></a>
+                                  </div>
+                                </div>
+                              </li>
+                              <li>
+                                <div class="TinTuc_SuKien_Detail">
+                                  <div class="text_tintuc">
+                                    <div class="text_tintuc_detail">
+                                      <h4>Kiến Thức Chăn Nuôi</h4>
+                                      <h3><a
                                           href="https://www.viet-acc.com/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/">6
                                           bước trong lập công thức thức ăn chăn nuôi</a></h3>
                                       <p>Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới
